--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
     </div>
 
-     <div class="row">
+
+    <div class="row">
       <div class="col-4">
         <div class="box orange">4 columns</div>
       </div>
@@ -48,6 +49,7 @@
       <div class="col-6">
         <div class="box blue">6 columns</div>
       </div>
+    </div>
 
      <div class="row">
       <div class="col-12">
